--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,9 @@ creator:
 developerOptions: false
 devOptionsLocStore: "gitCRATemplateDevOptions"
 exitByURL: false
-exitPage: "/gst-hst-business/exit-intent-e.html"
+exitPage: 
+  en: "/core-prototype/exit-intent-e.html"
+  fr: "/core-prototype/exit-intent-f.html"
 externalOrigin: "https://www.canada.ca"
 modifiedLinkList: "/core-prototype/source/data/link-excludes.json"
 relativeExternalLinks: false
