--- a/gemfile
+++ b/gemfile
@@ -5,4 +5,4 @@ source "https://rubygems.org"
 gem "github-pages", group: :jekyll_plugins
 gem "html-proofer"
 gem "rake"
-gem 'jekyll-gh-pages'
+gem "jekyll-gh-pages"
