--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -37,8 +37,10 @@ jobs:
           SAVE_SUPER_LINTER_SUMMARY: true
           FIX_CSS_PRETTIER: false
           FIX_JAVASCRIPT_PRETTIER: false
+          FIX_JSON_PRETTIER: false
           FIX_MARKDOWN_PRETTIER: false
           FIX_YAML_PRETTIER: false
           DEFAULT_BRANCH: main
           FILTER_REGEX_EXCLUDE: (_includes\/.+?\.html|resources\/tools\/tinymce\/.+?)
+
 
